--- a/config/locales/ko/ko.yml
+++ b/config/locales/ko/ko.yml
@@ -176,6 +176,7 @@ ko:
             bankbook:
                 name: 통장명
                 number: 통장번호
+                bankname: 은행명
                 account_holder: 예금주
             bank_transaction:
                 account: 은행계좌
