--- a/config/locales/ko/ko.yml
+++ b/config/locales/ko/ko.yml
@@ -484,6 +484,7 @@ ko:
                 after: "%{month}개월 후"
             payment_record:
                 name: 이름
+                amount: 금액
                 bankbook: 통장
                 bankbook_id: 통장
             payment_request:
