--- a/config/locales/ko/ko.yml
+++ b/config/locales/ko/ko.yml
@@ -1578,6 +1578,7 @@ ko:
         changepw:
             title: 비밀번호 변경
             oldpassword_wrong: 이전 비밀번호가 틀렸습니다.
+            password_confirm_blank: 비밀번호는 빈 칸을 넣을 수 없습니다.
             password_confirm_wrong: 비밀번호와 비밀번호 확인이 일치하지 않습니다.
             successfully_changed: 성공적으로 변경하였습니다.
         changepw_form:
