applying card approved histories

--- a/config/locales/ko/ko.yml
+++ b/config/locales/ko/ko.yml
@@ -109,6 +109,8 @@ ko:
             card_approved_source: 카드 승인내역
             card_history: 카드 사용내역
             card_used_source: 카드 이용내역
+            shinhan_card_approved_history: 신한카드 승인내역
+            hyundai_card_approved_history: 현대카드 승인내역
             cardbill: "카드 영수증"
             change_history: 변경사항
             commute: 출퇴근
@@ -233,6 +235,31 @@ ko:
                 bankbook: 통장
                 bankbook_id: 통장
                 owner: 대표자
+            shinhan_card_approved_history:
+                used_at: 이용일시
+                approve_no: 승인번호
+                card_name: 이용카드
+                card_holder_name: 이용자명
+                store_name: 가맹점
+                money: 이용금액
+                used_type: 이용구분
+                monthly_duration: 할부개월수
+                canceled_at: 취소일자
+                purchase_status: 매입상태
+                will_be_paied_at: 결제예정일
+            hyundai_card_approved_history:
+              transacted_date: 거래일자
+              transacted_time: 시각
+              card_number: 카드번호
+              money: 승인금액
+              money_us: 승인금액($)
+              card_holder_name: 이용자명
+              store_name: 가맹점명
+              nation: 국가명
+              status: 상태
+              approve_number: 승인번호
+              nation_statement: 국내외
+              refuse_reason: 거절사유
             card_approved_source:
                 used_at: 이용일시
                 approve_no: 승인번호
@@ -944,6 +971,10 @@ ko:
             title: 거래처 수정
             picture: 사업자등록증
         title: 거래처 관리
+    shinhan_card_approved_histories:
+      title: 신한카드 승인내역
+    hyundai_card_approved_histories:
+      title: 현대카드 승인내역
     card_approved_sources:
         index:
             title: 카드별 승인내역
