applying oversea card approved source

--- a/config/locales/ko/ko.yml
+++ b/config/locales/ko/ko.yml
@@ -111,6 +111,7 @@ ko:
             card_used_source: 카드 이용내역
             shinhan_card_approved_history: 신한카드 승인내역
             hyundai_card_approved_history: 현대카드 승인내역
+            oversea_card_approved_history: 해외카드 승인내역
             cardbill: "카드 영수증"
             change_history: 변경사항
             commute: 출퇴근
@@ -260,6 +261,22 @@ ko:
               approve_number: 승인번호
               nation_statement: 국내외
               refuse_reason: 거절사유
+            oversea_card_approved_history:
+              used_at: 이용일시
+              approved_number: 승인번호
+              card_name: 이용카드
+              card_holder_name: 이용자명
+              store_name: 가맹점명
+              money: 이용금액
+              money_locale: 현지금액
+              money_locale_currency: 현지통화
+              money_locale_name: 현지통화명
+              money_us: 미화금액
+              used_type: 이용구분
+              card_type: 카드구분
+              refused_at: 취소일자
+              purchase_status: 매입상태
+              will_be_paied_at: 결제예정일
             card_approved_source:
                 used_at: 이용일시
                 approve_no: 승인번호
@@ -975,6 +992,8 @@ ko:
       title: 신한카드 승인내역
     hyundai_card_approved_histories:
       title: 현대카드 승인내역
+    oversea_card_approved_histories:
+      title: 해외카드 승인내역
     card_approved_sources:
         index:
             title: 카드별 승인내역
