--- a/config/locales/ko/ko.yml
+++ b/config/locales/ko/ko.yml
@@ -100,6 +100,7 @@ ko:
     activerecord:
         models:
             attachment: 첨부파일
+            asset: 자산
             bank_account: 은행계좌
             bankbook: 통장
             bank_transaction: 입출금 내역
@@ -163,6 +164,9 @@ ko:
             access_person:
                 access_type: 권한
                 accessor: 대상
+            asset:
+                title: 이름
+                description: 설명
             attachment:
                 comments: 주석
                 contenttype: 파일형식
@@ -871,6 +875,8 @@ ko:
         new:
             title: 첨부파일 신규 작성
         title: 첨부파일 관리
+    assets:
+        title: 자산 관리
     application:
       oauth_login:
         login_with_google: 구글 계정으로 로그인
