add owner and permission

--- a/config/locales/ko/ko.yml
+++ b/config/locales/ko/ko.yml
@@ -167,6 +167,7 @@ ko:
             asset:
                 title: 이름
                 description: 설명
+                owner: 소유자
             attachment:
                 comments: 주석
                 contenttype: 파일형식
