--- a/config/locales/ko/ko.yml
+++ b/config/locales/ko/ko.yml
@@ -168,6 +168,7 @@ ko:
                 title: 이름
                 description: 설명
                 owner: 소유자
+                owner_id: 소유자
             attachment:
                 comments: 주석
                 contenttype: 파일형식
